--- a/package.json
+++ b/package.json
@@ -28,7 +28,7 @@
     "@nestjs/platform-express": "^8.0.0",
     "@nestjs/typeorm": "^8.0.3",
     "apollo-server-express": "^3.7.0",
-    "crypto-random-string": "^4.0.0",
+    "bcrypt": "^5.0.1",
     "express": "^4.18.1",
     "graphql": "^16.4.0",
     "jsonwebtoken": "^8.5.1",
@@ -42,6 +42,7 @@
     "@nestjs/cli": "^8.0.0",
     "@nestjs/schematics": "^8.0.0",
     "@nestjs/testing": "^8.0.0",
+    "@types/bcrypt": "^5.0.0",
     "@types/express": "^4.17.13",
     "@types/jest": "27.5.0",
     "@types/jsonwebtoken": "^8.5.8",
