--- a/ormconfig.json
+++ b/ormconfig.json
@@ -1,11 +1,14 @@
 {
   "type": "mysql",
-  "host": "localhost",
+  "host": "mysql",
   "port": 3306,
   "username": "root",
   "password": "root",
-  "database": "test",
+  "database": "acmhomepage",
   "entities": ["dist/entitys/*{.ts,.js}"],
-  "//": "TODO shouldn't be used in production.",
-  "synchronize": true
+  "migrations": ["dist/migrations/*.ts"],
+  "migrationsRun": true,
+  "cli": {
+    "migrationsDir": "dist/migrations"
+  }
 }
