--- a/package.json
+++ b/package.json
@@ -9,10 +9,18 @@
     "prebuild": "rimraf dist",
     "build": "nest build",
     "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
-    "start": "nest start",
-    "start:dev": "nest start --watch",
-    "start:debug": "nest start --debug --watch",
-    "start:prod": "node dist/main",
+    "start": "NODE_ENV=dev nest start",
+    "start:dev": "zx ./scripts/start-in-dev-mode.mjs start:dev:entry",
+    "start:dev:entry": "NODE_ENV=dev nest start --watch",
+    "start:debug": "NODE_ENV=dev nest start --debug --watch",
+    "start:prod": "NODE_ENV=prod node dist/main",
+    "dockerCompose:prod:build": "docker-compose -f docker-compose.yml build",
+    "dockerCompose:prod": "docker-compose -f docker-compose.yml up",
+    "dockerCompose:prod:entry": "zx ./scripts/start-in-docker.mjs start:prod",
+    "database:build": "docker build -f Dockerfile.mysql -t acmhomepage-nextback-database .",
+    "database": "docker run -d -p 3306:3306 --name acmhomepage-nextback-database acmhomepage-nextback-database",
+    "database:cli": "mysql -h localhost -P 3306 -u root -proot",
+    "database:stop": "docker rm -f acmhomepage-nextback-database",
     "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
     "test": "jest",
     "test:watch": "jest --watch",
@@ -41,7 +49,7 @@
   "devDependencies": {
     "@nestjs/cli": "^8.0.0",
     "@nestjs/schematics": "^8.0.0",
-    "@nestjs/testing": "^8.0.0",
+    "@nestjs/testing": "^8.4.4",
     "@types/bcrypt": "^5.0.0",
     "@types/express": "^4.17.13",
     "@types/jest": "27.5.0",
@@ -62,7 +70,8 @@
     "ts-node": "^10.0.0",
     "tsconfig-paths": "4.0.0",
     "typescript": "^4.3.5",
-    "webpack": "^5.72.0"
+    "webpack": "^5.72.0",
+    "zx": "^6.1.0"
   },
   "jest": {
     "moduleFileExtensions": [
