chore/style: Update scripts
Now we have better way to run our application, or to work will
docker-compose and database.

--- a/Dockerfile.backend
+++ b/Dockerfile.backend
@@ -13,4 +13,4 @@ USER node
 EXPOSE 8030
 
 # Init the database and run
-CMD ["yarn", "dockerCompose:prod:entry"]
+CMD ["yarn", "start", "--mode=prod"]
