--- a/package.json
+++ b/package.json
@@ -6,21 +6,12 @@
   "private": true,
   "license": "UNLICENSED",
   "scripts": {
+    "start": "zx ./scripts/start.mjs",
+    "database": "zx ./scripts/database.mjs",
+    "docker-compose": "zx ./scripts/docker-compose.mjs",
     "prebuild": "rimraf dist",
     "build": "nest build",
     "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
-    "start": "NODE_ENV=dev nest start",
-    "start:dev": "zx ./scripts/start-in-dev-mode.mjs start:dev:entry",
-    "start:dev:entry": "NODE_ENV=dev nest start --watch",
-    "start:debug": "NODE_ENV=dev nest start --debug --watch",
-    "start:prod": "NODE_ENV=prod node dist/main",
-    "dockerCompose:prod:build": "docker-compose -f docker-compose.yml build",
-    "dockerCompose:prod": "docker-compose -f docker-compose.yml up",
-    "dockerCompose:prod:entry": "zx ./scripts/start-in-docker.mjs start:prod",
-    "database:build": "docker build -f Dockerfile.mysql -t acmhomepage-nextback-database .",
-    "database": "docker run -d -p 3306:3306 --name acmhomepage-nextback-database acmhomepage-nextback-database",
-    "database:cli": "mysql -h localhost -P 3306 -u root -proot",
-    "database:stop": "docker rm -f acmhomepage-nextback-database",
     "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
     "test": "jest",
     "test:watch": "jest --watch",
